# book_gen

./: .gitignore  README.md  main.py  main_book.py  model.py  pyproject.toml
app/agent/: agent.py  content_generator_agent.py  front_designer_agent.py  plan_agent.py
app/generator/: generator.py  personnal_development_generator.py  story_generator.py
app/orchestrator/: agent_orchestrator.py
domain/dataclass/: book_state.py
domain/enum/: book_topic.py  book_type.py  writting_method.py
domain/error/: unhandled_map_key_error.py
infra/model/: deepseek_model.py  gpt_4o_model.py
infra/temp/: temp_file_writter.py
tempfile/: book.md
